--- a/reactclient/index.html
+++ b/reactclient/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+  <!-- <link rel="icon" href="favicon.ico" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -11,12 +11,21 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+<!-- BootStrap CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
+<!-- AOS Animate Library -->
+<link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
+
+<!-- Custom Styles -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+<!-- React Quill RichText -->
+<link rel="stylesheet" href="https://unpkg.com/react-quill@1.3.3/dist/quill.snow.css" />
+
+<!--  -->
   <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
   <title>ReactApp</title>
 </head>
@@ -24,7 +33,7 @@
 <body>
 
   <div id="root"></div>
-  <!-- Scripts -->
+<!-- Boot Strap Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
     crossorigin="anonymous"></script>
@@ -33,6 +42,30 @@
     crossorigin="anonymous"></script>
 
   <script type="module" src="./src/index.jsx"></script>
+  <script>
+    const myModal = new bootstrap.Modal(document.getElementById('myModal'), options)
+    const myModalAlternative = new bootstrap.Modal('#myModal', options)
+  </script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init(
+      {
+        debounceDelay: 1000,
+        once: false,
+        mirror: true,
+        debounceDelay: 50,
+        duration: 1000,
+        easing: 'ease',
+        anchorPlacement: 'top-bottom',
+      }
+    );
+  </script>
+  
+  <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-quill@1.3.3/dist/react-quill.js"></script>
+  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+
 </body>
 
 </html>
